* Fixed all particle effects having garbage colours
	* Actually made them work...
* Fixed default OpenGL clear colour being searingly hot pink instead of just a normal black
* Fixed pressing non-alpha keys with capslock enabled
* Fixed pressing backspace in chat
* Fixed 1600x1200 resolution being skipped (was defined as same mode ID as 1600x900)
* Fixed the game window not resizing properly

REMOVALS:
* Removed obsolete/Q2/Q2 Expansion only entity flags:
	* EF_FLAG1
	* EF_FLAG2
	* EF_IONRIPPER
	* EF_GREENGIB
	* EF_BLUEHYPERBLASTER
	* EF_SPINNINGLIGHTS
	* EF_PLASMA
	* EF_TRAP
	* EF_TRACKER
	* EF_DOUBLE
	* EF_SPHERETRANS
	* EF_TAGTRAIL
	* EF_HALF_DAMAGE
	* EF_TRACKERTRAIL
* Removed obsolete/Q2/Q2 Expansion only render flags:
	* RF_IR_VISIBLE
	* RF_SHELL_DOUBLE
	* RF_SHELL_HALF_DAM
* Removed obsolete muzzle flashes for Quake2 expansion and CTF weapons
	* MZ_IONRIPPER
	* MZ_BLUEHYPERBLASTER
	* MZ_PHALANX
* Removed obsolete Q2/Q2 Expansion only temp entities:
	* TE_PARASITE_ATTACK
	* TE_MEDIC_CABLE_ATTACK
	* TE_BOSSTPORT
	* TE_GRAPPLE_CABLE
	* TE_WELDING_SPARKS
	* TE_GREENBLOOD
	* TE_BLUEHYPERBLASTER
	* TE_PLASMA_EXPLOSION
	* TE_TUNNEL_SPARKS
* Removed following particle effect functions (superseded by more generic alternatives)
	* CL_FlagTrail
	* CL_IonripperTrail
	* CL_BlasterParticles2
	* CL_BlasterTrail2
	* CL_DebugTrail
	* CL_SmokeTrail
	* CL_BubbleTrail2
	* CL_TrackerTrail
	* CL_Tracker_Explode
	* CL_TagTrail
	* CL_Tracker_Shell
	* CL_MonsterPlasma_Shell
	* CL_ColorExplosionParticles
	* CL_WidowSplash
	* "Laser" specific effect was removed
OpenGL legacy code purge #49123712632:
	* Removed gl_finish cvar (replaced with gl_vsync and simply reduced framerate by stalling until all effects were done)
	* Removed gl_ztrick cvar and ztrick code
		* Had no effect on performance, was a method of not clearing the Z-buffer between frames, which made some very old (RIVA 128 and TNT) Nvidia cards faster. Since these GPUs