@@ -1404,7 +1404,7 @@ static const char *creditstext[] =
 	"^5TOOLS^7",
 	"",
 	"TrenchBroom ^5Team^7",
-	"ericw-tools ^5Team^7",
+	"^5ZBSP^7 based off of Qbism - Qbism ^5Team^7",
 	"Krzysztof Kondrak ^5(vkquake2)^7",
 	"^5id^7 Software ^5(Original Quake 2 engine)^7",
 	"unsubtract ^5(mkpak)^7",
@@ -1426,7 +1426,8 @@ static const char *creditstext[] =
 	"Adrian",
 	"didimmick",
 	"pivotman319",
-	"",
+	"kino",
+	"UnknownPolish",	"",
 	"",
 	"^5Game software (C) 2023-2024 starfrost^7",
 	"",
